[prem] ADDED:varify mail searching notes addlablenotes
